# wasmweb

./: Cargo.toml  README.md
guest/: Cargo.toml  schema.widl
guest/src/: generated.rs  lib.rs
host/: Cargo.toml
host/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
