[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc = "1.0.0"
wasmtime-provider = "1.0.1"
wapc-codec = "1.0.0"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
clap = { version="3.2.8", features=["derive"]}
